fix: checkout haex-e2e-tests repo explicitly in reusable workflow
When called from another repository via workflow_call, the default
checkout action checks out the calling repository, not the one
where the workflow is defined. Explicitly specify the repository
to ensure docker/docker-compose.yml is available.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -111,6 +111,9 @@ jobs:
     steps:
       - name: Checkout E2E tests
         uses: actions/checkout@v4
+        with:
+          repository: haex-space/haex-e2e-tests
+          ref: main
 
       - name: Resolve versions from project config
         id: versions
