--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -267,10 +267,18 @@ jobs:
           SYNC_SERVER_IMAGE: ${{ inputs.sync_server_image }}
         run: |
           echo "Building with:"
-          echo "  haex-vault: ${USE_PREBUILT_VAULT == 'true' && 'PRE-BUILT' || $HAEX_VAULT_VERSION}"
+          if [ "$USE_PREBUILT_VAULT" == "true" ]; then
+            echo "  haex-vault: PRE-BUILT"
+          else
+            echo "  haex-vault: $HAEX_VAULT_VERSION"
+          fi
           echo "  haextension: $HAEXTENSION_VERSION"
           echo "  vault-sdk: $VAULT_SDK_VERSION"
-          echo "  sync-server: ${USE_PREBUILT_SYNC_SERVER == 'true' && $SYNC_SERVER_IMAGE || $HAEX_SYNC_SERVER_VERSION}"
+          if [ "$USE_PREBUILT_SYNC_SERVER" == "true" ]; then
+            echo "  sync-server: $SYNC_SERVER_IMAGE"
+          else
+            echo "  sync-server: $HAEX_SYNC_SERVER_VERSION"
+          fi
 
           docker compose -f docker/docker-compose.yml build
 
