--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -51,17 +51,24 @@ on:
         description: 'Pre-built sync-server Docker image (e.g., ghcr.io/haex-space/haex-sync-server:latest)'
         type: string
         default: ''
+      haex_vault_android_artifact:
+        description: 'GitHub artifact name containing pre-built Android APK (enables Android E2E tests if set)'
+        type: string
+        default: ''
     secrets:
       ARTIFACT_TOKEN:
         description: 'Token with permission to download artifacts from other repos (defaults to GITHUB_TOKEN)'
         required: false
     outputs:
       success:
-        description: 'Whether tests passed'
-        value: ${{ jobs.e2e.outputs.success }}
+        description: 'Whether all tests passed (desktop and android if enabled)'
+        value: ${{ jobs.e2e.outputs.success && (inputs.haex_vault_android_artifact == '' || jobs.android-e2e.outputs.success) }}
       test_result:
-        description: 'Test result summary'
+        description: 'Desktop test result summary'
         value: ${{ jobs.e2e.outputs.test_result }}
+      android_test_result:
+        description: 'Android test result summary'
+        value: ${{ jobs.android-e2e.outputs.test_result }}
       artifact_name:
         description: 'Name of the uploaded artifact'
         value: ${{ jobs.e2e.outputs.artifact_name }}
@@ -349,6 +356,138 @@ jobs:
           fi
 
       - name: Stop services
+        if: always()
+        run: |
+          docker compose -f docker/docker-compose.yml down -v
+
+  # Android E2E Tests - runs after desktop tests, uses Maestro for UI automation
+  android-e2e:
+    name: Android E2E Tests (${{ inputs.build_type }})
+    runs-on: ubuntu-latest
+    timeout-minutes: 45
+    needs: e2e
+    # Only run if Android artifact is provided
+    if: inputs.haex_vault_android_artifact != ''
+
+    outputs:
+      success: ${{ steps.test.outcome == 'success' }}
+      test_result: ${{ steps.test.outcome }}
+
+    steps:
+      - name: Checkout E2E tests
+        uses: actions/checkout@v4
+        with:
+          repository: haex-space/haex-e2e-tests
+          ref: main
+
+      - name: Enable KVM for Android emulator
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: Download Android APK artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.haex_vault_android_artifact }}
+          run-id: ${{ inputs.haex_vault_artifact_run_id }}
+          github-token: ${{ secrets.ARTIFACT_TOKEN || github.token }}
+          path: ./apk
+
+      - name: List APK files
+        run: |
+          echo "Downloaded APK files:"
+          ls -la ./apk/
+          find ./apk -name "*.apk" -type f
+
+      - name: Install Maestro
+        run: |
+          curl -Ls https://get.maestro.mobile.dev | bash
+          echo "$HOME/.maestro/bin" >> $GITHUB_PATH
+
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo rm -rf /usr/local/lib/android/sdk/ndk
+          df -h
+
+      - name: Start backend services for sync tests
+        run: |
+          # Start only the services needed for Android sync tests
+          docker compose -f docker/docker-compose.yml up -d db gotrue kong sync-server
+
+          # Wait for services to be healthy
+          echo "Waiting for backend services..."
+          for i in {1..60}; do
+            if curl -s http://localhost:3002/ > /dev/null 2>&1; then
+              echo "Sync server is ready!"
+              break
+            fi
+            echo "Waiting for sync server... ($i/60)"
+            sleep 2
+          done
+
+          # Verify all services are up
+          docker compose -f docker/docker-compose.yml ps
+
+      - name: Run Android E2E Tests
+        id: test
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          arch: x86_64
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
+          script: |
+            # Find the APK file
+            APK_FILE=$(find ./apk -name "*.apk" -type f | head -1)
+            echo "Installing APK: $APK_FILE"
+
+            # Install the APK
+            adb install "$APK_FILE"
+
+            # Set up port forwarding for sync server
+            # 10.0.2.2 is the host from Android emulator's perspective
+            # We use adb reverse to make localhost:3002 accessible from the app
+            adb reverse tcp:3002 tcp:3002
+            adb reverse tcp:8000 tcp:8000
+
+            # Run Maestro tests
+            echo "Running Maestro smoke test..."
+            ~/.maestro/bin/maestro test .maestro/android-smoke-test.yaml --format junit --output maestro-results.xml || true
+
+            # Check if there are sync tests
+            if [ -f ".maestro/android-sync-test.yaml" ]; then
+              echo "Running Maestro sync test..."
+              ~/.maestro/bin/maestro test .maestro/android-sync-test.yaml --format junit --output maestro-sync-results.xml || true
+            fi
+
+      - name: Upload Maestro test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-e2e-results-${{ inputs.build_type }}-${{ github.run_id }}
+          path: |
+            maestro-results.xml
+            maestro-sync-results.xml
+            ~/.maestro/tests/
+          retention-days: 30
+
+      - name: Write Android test summary
+        if: always()
+        run: |
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "## Android E2E Test Result" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ steps.test.outcome }}" == "success" ]; then
+            echo "✅ **Android tests passed**" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "❌ **Android tests failed**" >> $GITHUB_STEP_SUMMARY
+          fi
+
+      - name: Stop backend services
         if: always()
         run: |
           docker compose -f docker/docker-compose.yml down -v
