fix: ensure prebuilt directory exists before docker build
The Dockerfile expects a prebuilt/ directory in the build context.
Create it even if empty to avoid COPY failures.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -287,6 +287,9 @@ jobs:
             echo "  sync-server: $HAEX_SYNC_SERVER_VERSION"
           fi
 
+          # Ensure prebuilt directory exists (even if empty)
+          mkdir -p docker/prebuilt
+
           docker compose -f docker/docker-compose.yml build
 
       - name: Start services
