fix: create prebuilt directory at repo root, not docker/
The Dockerfile build context is the parent directory (..), so the
prebuilt/ directory must be at the repo root.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -288,7 +288,8 @@ jobs:
           fi
 
           # Ensure prebuilt directory exists (even if empty)
-          mkdir -p docker/prebuilt
+          # The Dockerfile's build context is the repo root (..), so prebuilt/ must be there
+          mkdir -p prebuilt
 
           docker compose -f docker/docker-compose.yml build
 
