feat: add desktop screen recording for E2E tests
- Install ffmpeg in Docker container
- Start X11 screen recording in global-setup before tests
- Stop recording and save video in global-teardown
- Records to test-results/artifacts/desktop-recording.webm
- Uses VP9 codec at 10fps for good quality with small file size

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -55,6 +55,8 @@ RUN apt-get update && apt-get install -y \
     libasound2t64 \
     # socat for cross-container communication (dual-vault tests)
     socat \
+    # ffmpeg for desktop screen recording during tests
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Node.js via NodeSource
