fix: use docker compose up/exec instead of run for E2E tests
The workflow was using 'docker compose run --rm' which creates a new
container without properly mounting the named volume for test results.
This meant the desktop-recording.webm and other artifacts were lost.

Changes:
- Use 'docker compose up -d vault-a' to start the container with volumes
- Use 'docker compose exec' to run tests in the running container
- Add 60s wait for services to initialize (tauri-driver, nuxt, etc.)

This ensures test artifacts (screen recordings, traces, screenshots)
are properly saved to the named volume and can be uploaded as artifacts.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -322,8 +322,16 @@ jobs:
           SYNC_SERVER_IMAGE: ${{ inputs.sync_server_image }}
           CI: true
         run: |
-          # Run tests in vault-a container which has Playwright installed
-          docker compose -f docker/docker-compose.yml run --rm vault-a pnpm test
+          # Start vault-a with all services and run tests
+          # Using 'up' ensures the named volume is properly mounted for test results
+          docker compose -f docker/docker-compose.yml up -d vault-a
+
+          # Wait for services to initialize (tauri-driver, nuxt dev server, etc.)
+          echo "Waiting for E2E services to initialize..."
+          sleep 60
+
+          # Run tests inside the container
+          docker compose -f docker/docker-compose.yml exec vault-a pnpm test
 
       - name: Copy test results from container
         if: always()
