perf: optimize E2E test performance
- Replace fixed 60s sleep with smart health check polling (saves ~30-50s)
- Reduce initial wait times in global-setup (5s->1s, 2s->0.5s)
- Only capture trace/screenshot/video on test failure (reduces IO overhead)
- Use xrandr for more reliable screen resolution detection

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -337,9 +337,16 @@ jobs:
           # vault-b: Secondary vault for sync verification
           docker compose -f docker/docker-compose.yml up -d vault-a vault-b
 
-          # Wait for services to initialize (tauri-driver, nuxt dev server, etc.)
-          echo "Waiting for E2E services to initialize..."
-          sleep 60
+          # Wait for tauri-driver to be ready (replaces fixed 60s sleep)
+          echo "Waiting for tauri-driver to be ready..."
+          for i in {1..30}; do
+            if docker compose -f docker/docker-compose.yml exec -T vault-a curl -s http://localhost:4444/status > /dev/null 2>&1; then
+              echo "tauri-driver ready after ~$((i*2))s"
+              break
+            fi
+            echo "Waiting for tauri-driver... ($i/30)"
+            sleep 2
+          done
 
           # Verify both containers are running
           echo "Container status:"
