perf: only build vault-a, tag as vault-b (identical images)

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -324,8 +324,8 @@ jobs:
           # Ensure prebuilt directory exists (even if empty)
           mkdir -p prebuilt
 
-          # Build all images
-          docker compose -f docker/docker-compose.yml build
+          # Build only vault-a and sync-server (vault-b uses same image as vault-a)
+          docker compose -f docker/docker-compose.yml build vault-a sync-server
 
           # Export vault and sync-server images for parallel test jobs
           # docker-compose uses project name from directory (docker/)
@@ -334,18 +334,18 @@ jobs:
           docker images | grep -E "(vault|sync)" || true
 
           # Get actual image names (format: <project>-<service>)
-          VAULT_A_IMAGE=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -E "vault-a" | head -1)
-          VAULT_B_IMAGE=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -E "vault-b" | head -1)
+          # vault-a and vault-b use identical Dockerfile/args, so we only save vault-a
+          VAULT_IMAGE=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -E "vault-a" | head -1)
           SYNC_IMAGE=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -E "sync-server" | head -1)
 
-          if [ -z "$VAULT_A_IMAGE" ] || [ -z "$VAULT_B_IMAGE" ] || [ -z "$SYNC_IMAGE" ]; then
+          if [ -z "$VAULT_IMAGE" ] || [ -z "$SYNC_IMAGE" ]; then
             echo "ERROR: Could not find required images"
             docker images
             exit 1
           fi
 
-          echo "Saving images: $VAULT_A_IMAGE, $VAULT_B_IMAGE, $SYNC_IMAGE"
-          docker save $VAULT_A_IMAGE $VAULT_B_IMAGE $SYNC_IMAGE | gzip > docker-images.tar.gz
+          echo "Saving images: $VAULT_IMAGE, $SYNC_IMAGE (vault-b will be tagged from vault-a)"
+          docker save $VAULT_IMAGE $SYNC_IMAGE | gzip > docker-images.tar.gz
           ls -lh docker-images.tar.gz
 
       - name: Upload Docker images artifact
@@ -398,6 +398,11 @@ jobs:
         run: |
           echo "Loading Docker images..."
           gunzip -c docker-images.tar.gz | docker load
+
+          # Tag vault-a as vault-b (they use identical Dockerfile)
+          VAULT_IMAGE=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -E "vault-a" | head -1)
+          docker tag "$VAULT_IMAGE" docker-vault-b:latest
+
           docker images
 
       - name: Pull base images
